--- a/element inspector/index.html
+++ b/element inspector/index.html
@@ -26,7 +26,7 @@
                 <!--home page-->
                 <a href="index.html">Index</a>
                 <br>
-                <a href="readings/index.html">Reading Responses</a>
+                <a href="reading responses/index.html">Reading Responses</a>
                 <a>&mdash;</a>
                 <!--dash to break up link categories-->
                 <a href="typeface/index.html">CSS Typeface</a>
