--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!--dash to break up link categories-->
                 <a href="typeface/index.html">CSS typeface</a>
                 <a href="typographic poster/index.html">Web typographic poster</a>
-                <a href="">Interactive elements</a>
+                <a href="interactive elements/index.html">Interactive elements</a>
                 <a>&#183; &#183; &#183;</a>
                 <a href="https://qrmn.co/70ldfw">Self-portrait</a>
                 <a href="flags/index.html">CSS flags</a>
