--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="sky-gradient sky-gradient-03"></div>
     <div class="sky-gradient sky-gradient-04"></div>
     <div class="sky-gradient sky-gradient-05">
-        <a href="/">index</a>
+        <a href="/index">index</a>
     </div>
     <div class="sky-gradient sky-gradient-06">
         <a href="reading 1/index.html">reading 1</a>
