--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="sky-gradient sky-gradient-21"></div>
     <div class="sky-gradient sky-gradient-22"></div>
     <footer>
-        <p>2021 &copy;</p>
+        2021 &copy;
         <!--copyright footer-->
     </footer>
     <script src="script.js"></script>
