--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Index</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Karla&family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
