--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Index</title>
     <meta charset="UTF-8">
-    <meta <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, content="initial-scale=0.1" user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Karla&family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
