--- a/reading 3/index.html
+++ b/reading 3/index.html
@@ -20,7 +20,7 @@
     <div class="sky-gradient sky-gradient-03"></div>
     <div class="sky-gradient sky-gradient-04"></div>
     <div class="sky-gradient sky-gradient-05">
-        <a href="https://elisemi.github.io/index/">index</a>
+        <a href="https://elisemi.github.io/index/">index2</a>
     </div>
     <div class="sky-gradient sky-gradient-06">
         <a href="http://contemporary-home-computing.org/turing-complete-user/">touring complete user</a>
