--- a/reading 4/index.html
+++ b/reading 4/index.html
@@ -20,7 +20,7 @@
     <div class="sky-gradient sky-gradient-03"></div>
     <div class="sky-gradient sky-gradient-04"></div>
     <div class="sky-gradient sky-gradient-05">
-        <a href="https://elisemi.github.io/index/">index</a>
+        <a href="https://elisemi.github.io/index/">index2</a>
     </div>
     <div class="sky-gradient sky-gradient-06">
         <a href="https://veryinteractive.net/content/2-library/6-my-website-is-a-shifting-house-next-to-a-river-of-knowledge-what-could-yours-be/schwulst-my-website-is-a-shifting-house.pdf">my website is a shifting house</a>
