--- a/reading 5/index.html
+++ b/reading 5/index.html
@@ -20,7 +20,7 @@
     <div class="sky-gradient sky-gradient-03"></div>
     <div class="sky-gradient sky-gradient-04"></div>
     <div class="sky-gradient sky-gradient-05">
-        <a href="https://elisemi.github.io/index/">index</a>
+        <a href="https://elisemi.github.io/index2/">index</a>
     </div>
     <div class="sky-gradient sky-gradient-06">
         <a href="https://www.are.na/blog/the-poetry-of-tools">the poetry of tools</a>
